--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Super taxad.sln"
+    "dotnet.defaultSolution": "jogo-uc-5-AdilsonCapas.sln"
 }
